--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.5.4"
 actix-web = "3"
+rust-s3 = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
