--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,4 @@ actix-cors = "0.5.4"
 actix-web = "3"
 rust-s3 = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
