--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.5.4"
 actix-web = "3"
+base64 = "0.13.0"
 rust-s3 = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.61"
 uuid = { version = "0.8", features = ["serde", "v4"] }
