--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,4 +12,5 @@ base64 = "0.13.0"
 rust-s3 = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.61"
+sha2 = "0.10.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
