--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-cors = "0.5.4"
 actix-web = "3"
 base64 = "0.13.0"
+jwt-simple = "0.10.8"
 rust-s3 = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.61"
